[tool.poetry]
name = "ml-parabola"
version = "0.1.0"
description = ""
authors = ["Juan Lee <ninejuan@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.2.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
